the_project/todo_app/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todo-app-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: todo-app
  template:
    metadata:
      labels:
        app: todo-app
    spec:
      volumes:
        - name: shared-image
          persistentVolumeClaim:
            claimName: local-pv-claim
      containers:
        - name: todo-app-container
          image: arkb2023/todo-app:2.5  # image name/tag
          volumeMounts:
          - name: shared-image
            mountPath: /usr/src/app/files
